k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-js-service
spec:
  selector:
    app: sample-js-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
